change in index page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>DevOps!</title>
 </head>
 <body>
-<p> hai from aws - aswani </p>
+<p> Hai From DevOps @ devopscloud.com </p>
 </body>
 </html>
